Moved FontFile to engine namespace

--- a/class_engine_1_1_cache.html
+++ b/class_engine_1_1_cache.html
@@ -237,7 +237,8 @@ Public Member Functions</h2></td></tr>
 <p>Looks up the cache to see if it can find the texture of the given file name in the cache. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">key</td><td></td></tr>
+    <tr><td class="paramname">key</td><td>The key to look up</td></tr>
+    <tr><td class="paramname">foundElement</td><td>The found element to pass out</td></tr>
   </table>
   </dd>
 </dl>
